hack/externalservice-openwebui.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-a-aichat-openwebui-proxy
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda
