hack/aichatworkspace-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  labels:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: ollama
spec:
  rules:
  - host: aichatworkspace.api.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aichatworkspace-api
            port:
              number: 8080
